# pacman

./: .gitignore  CMakeLists.txt  run.sh  run_4K.sh
benchmarks/: CMakeLists.txt
benchmarks/other/: CMakeLists.txt  ycsb_chameleondb.cpp  ycsb_pmem_rocksdb.cpp  ycsb_pmemkv.cpp  ycsb_viper.cpp
example/: CMakeLists.txt  example.cpp  ycsb_flatstore.cpp
results/: chameleondb_results.txt  chameleondb_scale_1024_results.txt  chameleondb_scale_256_results.txt  chameleondb_scale_4096_results.txt  flatstore_results.txt  flatstore_scale_1KB_results.txt  flatstore_scale_results.txt  listdb_scale_1024_results.txt  listdb_scale_256_results.txt  viper_results.txt  viper_scale_1KB_results.txt  viper_scale_results.txt
results/1024B/: chameleondb_scale_unif_results.txt  chameleondb_scale_zipf_results.txt  flatstore_scale_unif_results.txt  viper_scale_unif_results.txt
results/full_numa/: chameleondb_scale_unif_results.txt  flatstore_scale_unif_results.txt  flatstore_scale_zipf_results.txt  viper_scale_unif_results.txt
results/old/: chameleondb_scale_1KB_results.txt  chameleondb_scale_results.txt  flatstore_results.txt  flatstore_scale_4096_results.txt  viper_results.txt  viper_scale_4096_results.txt
results/single_numa/: chameleondb_scale_latest_results.txt  chameleondb_scale_unif_results.txt  chameleondb_scale_zipf_results.txt  flatstore_scale_latest_results.txt  flatstore_scale_unif_results.txt  flatstore_scale_zipf_results.txt  viper_scale_latest_results.txt  viper_scale_unif_results.txt  viper_scale_zipf_results.txt
results/tail_latency/: chameleondb_scale_latest_results.txt  chameleondb_scale_unif_results.txt  chameleondb_scale_zipf_results.txt  flatstore_scale_latest_results.txt  flatstore_scale_unif_results.txt  flatstore_scale_zipf_results.txt  viper_scale_latest_results.txt  viper_scale_unif_results.txt  viper_scale_zipf_results.txt
results/vldb0/: chameleondb_results.txt  flatstore_results.txt  viper_results.txt
