# example
#add_executable(example ${DB_FILES} example.cpp)
#target_link_libraries(example ${PMEM} ${PMEMOBJ} "stdc++fs")
#if (INDEX_TYPE EQUAL 1)
#  target_link_libraries(example cceh "stdc++fs")
#elseif (INDEX_TYPE EQUAL 2)
#  target_link_libraries(example fastfair "stdc++fs")
#elseif (INDEX_TYPE EQUAL 3)
#  target_link_libraries(example masstree "stdc++fs")
#endif()

add_executable(ycsb_flatstore ${DB_FILES} ycsb_flatstore.cpp)
target_link_libraries(ycsb_flatstore ${PMEM} ${PMEMOBJ} "stdc++fs")
if (INDEX_TYPE EQUAL 1)
  target_link_libraries(ycsb_flatstore cceh "stdc++fs")
elseif (INDEX_TYPE EQUAL 2)
  target_link_libraries(ycsb_flatstore fastfair "stdc++fs")
elseif (INDEX_TYPE EQUAL 3)
  target_link_libraries(ycsb_flatstore masstree "stdc++fs")
endif()

#add_executable(ycsb_viper ycsb_viper.cpp)
#target_link_libraries(ycsb_viper viper ${PMEM} ${PMEMOBJ} "stdc++fs")
